added duckduck searchgo tool

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ AZURE_OPENAI_API_KEY = "3wCRrQmKGc0k5eYxe2USK4yXeuQj7EtEWjF4fw0Z7aICCKDHJKYXJQQJ
 AZURE_OPENAI_ENDPOINT = "https://agent-training-foundryres.openai.azure.com/"
 AZURE_OPENAI_DEPLOYMENT_NAME = "gpt-4o"
 OPENAI_API_VERSION = "2025-04-01-preview"
+
+# Get keys for your project from the project settings page: https://cloud.langfuse.com
+LANGFUSE_PUBLIC_KEY = "pk-lf-7eab47cc-6608-4d4d-95e9-1e830b60b9e9" 
+LANGFUSE_SECRET_KEY = "sk-lf-438ec200-3367-425a-8283-4f858ba924f1"
+LANGFUSE_HOST = "https://cloud.langfuse.com" # 🇪🇺 EU region
